--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ isort = "^6.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
+pytest-cov = "^6.0.0"
 
 [tool.mypy]
 disallow_untyped_defs = true
