--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,10 @@ pytest-cov = "^6.0.0"
 [tool.mypy]
 disallow_untyped_defs = true
 warn_return_any = true
-exclude = 'venv'
+exclude = [
+    "venv",
+    "tests/",
+]
 
 [tool.isort]
 # максимальная длина строки
