--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ isort = "^6.0.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.0.0"
+requests = "^2.32.3"
+python-dotenv = "^1.1.0"
 
 [tool.mypy]
 disallow_untyped_defs = true
